--- a/config.ini
+++ b/config.ini
@@ -6,14 +6,14 @@
 ; 注释：学业、科研、就业、就医、其他必要事项
 出入校事由: 学业
 
-出入校事由详细描述: 前往本部上课
+出入校事由详细描述: 来燕园上课
 
 [out]
 
 ; 注释：只支持填写北京哦
 出校目的地: 北京
 
-出校行动轨迹: 万柳公寓 - 北大南门
+出校行动轨迹: 万柳公寓 - 燕园 - 万柳公寓
 
 [in]
 
